Removed unnecessary postResponse checks from main, and finalized LastRepliesBuilder variables.